--- a/packages/dewiki-chrome/package.json
+++ b/packages/dewiki-chrome/package.json
@@ -34,39 +34,40 @@
         "distribute": "yarn clean && NODE_ENV=production webpack && node scripts/zip.js"
     },
     "dependencies": {
-        "@plurid/plurid-functions": "^0.1.1",
-        "@plurid/plurid-themes": "^0.1.18",
-        "@plurid/plurid-ui-react": "^0.1.34",
-        "apollo-cache-inmemory": "^1.6.3",
-        "apollo-client": "^2.6.4",
-        "apollo-link-http": "^1.5.16",
-        "graphql": "^14.5.8",
-        "graphql-tag": "^2.10.1",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "styled-components": "^4.4.1"
+        "@plurid/plurid-functions": "^0.0.0-30",
+        "@plurid/plurid-themes": "^0.0.0-2",
+        "@plurid/plurid-ui-components-react": "^0.0.0-19",
+        "@plurid/plurid-ui-state-react": "^0.0.0-8",
+        "apollo-cache-inmemory": "^1.6.6",
+        "apollo-client": "^2.6.10",
+        "apollo-link-http": "^1.5.17",
+        "graphql": "^16.6.0",
+        "graphql-tag": "^2.12.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "styled-components": "^5.3.6"
     },
     "devDependencies": {
-        "@babel/core": "^7.7.5",
-        "@babel/preset-env": "^7.7.6",
-        "@babel/preset-react": "^7.7.4",
-        "@babel/preset-typescript": "^7.7.4",
-        "@babel/register": "^7.7.4",
-        "@types/chrome": "^0.0.91",
-        "@types/jest": "^24.0.23",
-        "@types/node": "^12.12.17",
-        "@types/react": "^16.9.16",
-        "@types/react-dom": "^16.9.4",
-        "@types/styled-components": "^4.4.1",
-        "copy-webpack-plugin": "^5.1.1",
-        "css-loader": "^3.3.2",
-        "html-webpack-plugin": "^3.2.0",
-        "jest": "^24.9.0",
-        "ts-jest": "^24.2.0",
-        "ts-loader": "^6.2.1",
-        "typescript": "^3.7.3",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.10",
+        "@babel/core": "^7.19.3",
+        "@babel/preset-env": "^7.19.3",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
+        "@babel/register": "^7.18.9",
+        "@types/chrome": "^0.0.197",
+        "@types/jest": "^29.1.1",
+        "@types/node": "^18.8.0",
+        "@types/react": "^18.0.21",
+        "@types/react-dom": "^18.0.6",
+        "@types/styled-components": "^5.1.26",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.1",
+        "html-webpack-plugin": "^5.5.0",
+        "jest": "^29.1.2",
+        "ts-jest": "^29.0.3",
+        "ts-loader": "^9.4.1",
+        "typescript": "^4.8.4",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
         "zip-folder": "^1.0.0"
     }
 }
